--- a/PD/BEACH/beach.html
+++ b/PD/BEACH/beach.html
@@ -124,16 +124,16 @@
 
         <!-- YouTube Video -->
         <div class="youtube-video">
-            <iframe width="560" height="230" src="https://www.youtube.com/embed/e_qOCsrRNSM?si=QU5laNVAKnJFydJR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="230" src="https://www.youtube.com/embed/UtfIgCasS0M?si=AXjUSGMuY9VHeXdO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- Images -->
         <div class="images-container">
-            <img src="https://static.toiimg.com/thumb/53376135.cms?width=1200&height=900" alt="Image 1">
-            <img src="https://i.ytimg.com/vi/h_i9wt7eUC0/hqdefault.jpg" alt="Image 2">
-            <img src="https://www.tripsavvy.com/thmb/_wpjHgh8lSmrVp-DKXAZUBOMU1E=/2122x1415/filters:no_upscale():max_bytes(150000):strip_icc()/GettyImages-509264739-56a3c3cc3df78cf7727f0b7a.jpg" alt="Image 3">
-            <img src="https://th.bing.com/th/id/OIP.0b-4PkJfXXEdLi5SSBwxzAHaED?rs=1&pid=ImgDetMain" alt="Image 4">
-            <img src="https://th.bing.com/th/id/OIP.BnYADswJ0SfQ9iQnWoWbqQAAAA?rs=1&pid=ImgDetMain" alt="Image 5">
+            <img src="https://tse4.mm.bing.net/th/id/OIP.gUOWJda1CWthBe_Exh8qYgHaEK?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Image 1">
+            <img src="https://as1.ftcdn.net/v2/jpg/03/54/04/70/1000_F_354047078_hXjMWbm3baYUehTYCiqD1L6KrxsbaJr8.jpg" alt="Image 2">
+            <img src="https://media1.thrillophilia.com/filestore/dfdrr9lw513ae6mb12mgnzzldgcd_war-memorial-pondicherry.jpg-nggid044796-ngg0dyn-720x640x100-00f0w011c010r110f110r010t010.jpg" alt="Image 3">
+            <img src="https://tse2.mm.bing.net/th/id/OIP.aQuXNpFEUtaiEYB6ajNHygHaE9?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Image 4">
+            <img src="https://www.exploreourindia.com/backend/web/images/post/big/3631_Mahatma%20Gandhi%20Statue%20pondicherry.webp" alt="Image 5">
         </div>
     </div>
 
