--- a/PD/BOAT/boat.html
+++ b/PD/BOAT/boat.html
@@ -124,16 +124,16 @@
 
         <!-- YouTube Video -->
         <div class="youtube-video">
-            <iframe width="560" height="230" src="https://www.youtube.com/embed/jixqnE1Guik?si=7iuMXpeQ3TOikWBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="230" src="https://www.youtube.com/embed/XSL1wVH5q8A?si=1zJQ8N0NjBl8veQe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- Images -->
         <div class="images-container">
-            <img src="https://i.ytimg.com/vi/8Xmypa36aGw/maxresdefault.jpg" alt="Image 1">
-            <img src="https://i.pinimg.com/originals/67/2c/91/672c91ed91870d28d2ad04e1e4822e74.jpg" alt="Image 2">
-            <img src="https://www.lifeberrys.com/img/article/festivals-in-india-2-1658467593-lb.jpg" alt="Image 3">
-            <img src="https://www.adotrip.com/public/images/areas/master_images/5c3dc0fb7ef3a-Gokana_Attractions.jpg" alt="Image 4">
-            <img src="https://th.bing.com/th/id/OIP.d9SMXl0axOaijP5fDgNVrgHaE7?rs=1&pid=ImgDetMain" alt="Image 5">
+            <img src="https://tse4.mm.bing.net/th/id/OIP.07j1FfaWPfU6VbW2dPVDLQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Image 1">
+            <img src="https://pondicherrytourism.co.in/images/places-to-visit/header/chunnambar-boat-house-parking-puducherry-tourism-entry-fee-timings-holidays-reviews-header.jpg" alt="Image 2">
+            <img src="https://d26dp53kz39178.cloudfront.net/media/uploads/products/image22_result-1675518696759.webp" alt="Image 3">
+            <img src="https://tse2.mm.bing.net/th/id/OIP.R5st0UQyU9V2tIGxQa6m6gHaEH?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Image 4">
+            <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/679784022.jpg?k=88cbe58913abfafb5aa3bd42f9a69d9b607099cf8d81bb8d5a5a52e7306539d2&o=&hp=1" alt="Image 5">
         </div>
     </div>
 
