--- a/PD/FRENCH/french.html
+++ b/PD/FRENCH/french.html
@@ -124,16 +124,16 @@
 
         <!-- YouTube Video -->
         <div class="youtube-video">
-            <iframe width="560" height="230" src="https://www.youtube.com/embed/UtfIgCasS0M?si=AXjUSGMuY9VHeXdO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="230" src="https://www.youtube.com/embed/k6sUkq_3lyw?si=a_Wys9H-OmJb1mCP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
         <!-- Images -->
         <div class="images-container">
-            <img src="https://i.pinimg.com/originals/66/ea/01/66ea015bcfd07b072c9240d1eb1cb92f.jpg" alt="Image 1">
-            <img src="https://www.archanaskitchen.com/images/archanaskitchen/1-Author/Jyothi_Rajesh/Jolada_Rotti__Jowar_Bhakri.jpg" alt="Image 2">
-            <img src="https://th.bing.com/th/id/R.8f580b9208bd57df7ca74103505e7d5a?rik=RPAVir88dM8C2w&riu=http%3a%2f%2fechoesoftravel.com%2fwp-content%2fuploads%2f2019%2f10%2fDSC_0475-01-1024x681.jpeg&ehk=eM7y8RuUzIxXDyaxRUkLGukALwmycLS8ZAMSbw86Eko%3d&risl=&pid=ImgRaw&r=0" alt="Image 3">
-            <img src="https://www.holidify.com/images/compressed/1599.jpg?v=1.1" alt="Image 4">
-            <img src="https://live.staticflickr.com/65535/50101192986_aa682f3896_b.jpg" alt="Image 5">
+            <img src="https://thumbs.dreamstime.com/b/french-baguette-croissant-buffet-line-36704690.jpg" alt="Image 1">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.kCWkB07K5q_jf7qEFK5rTgHaFx?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Image 2">
+            <img src="https://media-cdn.tripadvisor.com/media/vr-splice-j/09/11/18/46.jpg" alt="Image 3">
+            <img src="https://tse4.mm.bing.net/th/id/OIP.4u591i9yMjssW9Tci7uiXwHaD8?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Image 4">
+            <img src="https://www.trawell.in/admin/images/thumbs/150397901French-quarters_thumb.jpg" alt="Image 5">
         </div>
     </div>
 
